@@ -56,6 +56,8 @@
 
 #ifdef USE_CVC4
 #include "cvc4_Bindings.cc"
+#elif defined(USE_CVC5)
+#include "cvc5_Bindings.cc"
 #elif defined(USE_YICES2) 
 #include "yices2_Bindings.cc"
 #else
